# cmake-project-template

./: CMakeLists.txt  LICENSE  README.md  build
main/: CMakeLists.txt  main.cpp
src/OpenGLproject/: CMakeLists.txt  glad.c  myshader.cpp  rectangle.cpp  shader_s.h
src/Qtproject/: CMakeLists.txt  MyMainWindow.cpp  MyMainWindow.h
src/Qtproject/tests/: CMakeLists.txt  MyMainWindow_test.cpp
src/base/: CMakeLists.txt  CirQueue.cpp  CirQueue.h  cppdemo.cpp  cppdemo.h  division.cpp  division.h
src/base/tests/: CMakeLists.txt  division_test.cpp
src/net/: CMakeLists.txt  Detection.cpp  Detection.h
src/net/tests/: CMakeLists.txt  Detection_test.cpp
tests/: CMakeLists.txt  out_test.cpp
